2007-11-22  Neal H. Walfield  <neal@gnu.org>

	* rpc.h (RPC_UNMARSHAL): Only assert that IDX is equal to the
	number of untyped words if the error code is 0.

	(RPC63): New macro.
	(RPC74): Likewise.
	(RPC11_4): Likewise.

2007-11-19  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (includehurd_HEADERS): Add exceptions.h.
	* headers.m4: Link $(BUILDIR)/include/hurd/exceptions.h to
	exceptions.h.
	* exceptions.h: New file.

2007-11-19  Neal H. Walfield  <neal@gnu.org>

	* addr.h (ADDR_TO_PTR): Assert that the address corresponds to a
	pointer, not the root of a mapped page.  Update callers.
	(PTR_TO_ADDR): Return an address corresponding to a pointer, not
	the root of a mapped page.  Update callers.

2007-11-19  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (includehurd_HEADERS): Add rpc.h.
	* headers.m4: Link $(BUILDIR)/include/hurd/rpc.h to rpc.h.
	* rpc.h: New file.  Moved and generalized definitions RPC template
	definitions here from ../viengoos/rm.h.
	(RPC_CONCAT2): New macro.
	(RPC_CONCAT): Likewise.
	(RPC_STUB_PREFIX): Likewise.  Use it to generate the stub names.
	(RPC_STUB_PREFIX_): New macro.
	(RPC_ID_PREFIX): Likewise.  Use it to generate method ids.
	(RPC_ID_PREFIX_): New macro.
	(RPC_TARGET): Make sure this macro is defined.
	(RPC_TARGET_ARG_): Define.
	(RPC_TARGET_): Define.
	(RPC_MARSHAL): New macro.
	(RPC_UNMARSHAL): New macro.
	(RPCX): Use the above macros.  Take four additional arguments, the
	list of in and out parameters with and without types.  Update
	users.  General marshal and unmarshal stubs.
	(RPCLOAD): Append argument to *MSG.
	(RPCSTORE): Store from *MSG, not registers.

2007-11-16  Neal H. Walfield  <neal@gnu.org>

	* addr-trans.h: New file.
	* addr.h: Likewise.
	* cap.h: Likewise.
	* folio.h: Likewise.
	* stddef.h: Likewise.
	* startup.h: Include <hurd/addr.h> and <stddef.h>.  Don't include
	<sys/types.h>.
	(HURD_STARTUP_ADDR): Don't define.
	(HURD_STARTUP_SIZE_LOG2): Likewise.
	(HURD_STARTUP_SIZE): Likewise.